fixed up margins on smaller sizes

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,7 +11,7 @@ img {
 }
 /* generic styles and full size grid */
 h1 {
-    margin-top:18px;
+    margin-top:10px;
 }
 h3 {
     color:#333;
@@ -35,8 +35,11 @@ h3 {
 }
 /* smaller than that */
 @media only screen and (max-width: 959px) {
-    h1 {
-        margin-top: 0;
+    h3 {
+        margin-top: 16px;
+    }
+    .links {
+        margin-top: 25px;
     }
     .links li {
         display: block;
